--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hpp": "^0.2.3",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
